--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/localize": "^13.3.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@types/socket.io-client": "^3.0.0",
+    "bootstrap": "^4.5.0",
+    "ng-socket-io": "^0.2.4",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
